# ci-hub-orchestrator

./: .gitignore  .gitleaksignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .yamllint  AGENTS.md  ANALYSIS_INDEX.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  Dockerfile  HONEST_STATUS.md  MULTI_REPO_ANALYSIS.md  MULTI_REPO_IMPLEMENTATION_STATUS.md  Makefile  README.md  SMOKE_TEST_SETUP_SUMMARY.md  START_HERE.md  STRUCTURE.md  audit.md  claude_audit.md  issues.md  mutation-observatory.ci.yaml  plan.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml
.github/workflows/: chaos.yml  codeql.yml  config-validate.yml  cross-time-determinism.yml  dr-drill.yml  hub-ci.yml  hub-orchestrator.yml  hub-pipeline.yml  hub-production-ci.yml  hub-run-all.yml  hub-security.yml  java-ci.yml  kyverno-ci.yml  kyverno-validate.yml  mutation.yml  project-ci.yml  python-ci.yml  rekor-monitor.yml  release.yml  schema-ci.yml  security-lint.yml  sign-digest.yml  smoke-test.yml  sync-templates.yml  template-guard.yml  tools-ci.yml  unit.yml  update-action-pins.yml
_quarantine/: README.md
_quarantine/phase0_utils/: derive_dr_current_time.py  safe_subprocess.py
_quarantine/phase10_config/: .bandit.full.yaml  .bandit.yaml  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore
_quarantine/phase1_supply_chain/: build_issuer_subject_input.py  build_vuln_input.py  cache_provenance.sh  export_provenance_envelope.py  generate_vex.py  normalize_provenance.py  provenance_io.py  publish_referrers.sh  rekor_monitor.sh  sign_evidence_bundle.sh
_quarantine/phase2_resilience/: run_chaos.py  run_dr_drill.py
_quarantine/phase3_performance/: cache_sentinel.py  generate_scheduler_reports.py
_quarantine/phase4_policy/: deploy_kyverno.sh  deploy_kyverno_policies.sh  kyverno_policy_checker.py  prepare_policy_inputs.py  run_kyverno_kind.sh
_quarantine/phase5_analysis/: mutation_observatory.py
_quarantine/phase6_ingestion/: chaos_dr_ingest.py  record_job_telemetry.py
_quarantine/phase7_validators/: check_runner_isolation.py  check_workflow_integrity.py  enforce_concurrency_budget.py
_quarantine/phase8_security_scripts/: determinism_check.sh  github_actions_egress_wrapper.sh  scan_runtime_secrets.sh
artifacts/: slsa-provenance.json
autopsy/: analyzer.py
badges/: bandit.json  black.json  mutmut.json  pip-audit.json  ruff.json  zizmor.json
chaos/: chaos-fixture.json
cihub/: aggregation.py  badges.py  ci_config.py  ci_report.py  ci_runner.py  cli.py  correlation.py  reporting.py  types.py
config/: defaults.yaml  mutation-observatory.ci.yaml  projects.yaml  repositories.yaml  runner-isolation.yaml
dashboards/: overview.json  repo-detail.json
data-quality-and-dr/: dr_recall.sh
docs/: CANARY_SETUP.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  DR_RUNBOOK.md  ISSUES_MIGRATION.md  MODES.md  ONBOARDING.md  OPS_RUNBOOK.md  POSTMORTEM.md  README.md  RESEARCH.md  SECURITY.md  SMOKE_TEST.md  SMOKE_TEST_REPOS.md  SUPPLY_CHAIN.md  TEMPLATES.md  TESTING.md  TODO.md  TOOLS.md  TROUBLESHOOTING.md  WORKFLOWS.md  backlog.md  documentationupdate.md  index.md  start-here.md
ingest/: event_loader.py
learn-caesar-cipher-main/: Dockerfile  README.md
make/: common.mk  determinism.mk  dr.mk  lint.mk
models/: dbt_project.yml
policies/: README.md  egress-allowlist.md  issuer_subject.rego  oci_referrers.rego  sbom_vex.rego
pyqt/: planqt.md
requirements/: P0.md  P1.md  README.md  nonfunctional.md  requirements-dev.txt  requirements.txt
schema/: ci-hub-config.schema.json  ci-report.v2.json  dr_drill.event.v1.json  pipeline_run.v1.2.json  registry.json
scripts/: aggregate_reports.py  apply_profile.py  build_project_ci_summary.py  capture_canary_decision.py  check_quarantine_imports.py  check_schema_registry.py  ci_metrics_summary.py  cli_command_matrix.py  consolidate_telemetry.py  correlation.py  debug_orchestrator.py  emit_cache_quarantine_event.py  emit_pipeline_run.py  enforce_concurrency_budget.py  enforce_egress_control.sh  github_actions_egress_wrapper.sh  install_tools.sh  load_config.py  load_projects.py  load_repository_matrix.py  prepare_policy_inputs.py  python_ci_badges.py  record_job_telemetry.py  render_summary.py  run_aggregation.py  run_cli_integration.py  sign_evidence_bundle.sh  test_egress_allowlist.sh  test_kyverno_policies.py  validate_config.py  validate_cross_time_determinism.sh  validate_report.sh  validate_summary.py  verify-smoke-test-setup.sh  verify_hub_matrix_keys.py
supply-chain-enforce/: README.md
templates/: README.md
tests/: test_aggregate_reports.py  test_apply_profile.py  test_ci_config.py  test_ci_engine.py  test_ci_report.py  test_ci_runner.py  test_cihub_cli.py  test_cli_command_matrix.py  test_cli_commands.py  test_cli_integration.py  test_cli_snapshots.py  test_commands.py  test_commands_adr.py  test_commands_check.py  test_commands_ci.py  test_commands_docs.py  test_commands_extended.py  test_commands_new.py  test_commands_smoke.py  test_commands_templates.py  test_config_cmd.py  test_config_module.py  test_config_outputs.py  test_config_pipeline.py  test_contract_consistency.py  test_correlation.py  test_diagnostics.py  test_e2e_smoke.py  test_hub_ci.py  test_performance.py  test_pom_cmd.py  test_pom_parsing.py  test_pom_tools.py  test_python_ci_badges.py  test_report.py  test_report_aggregate_reports_dir.py  test_reporting.py  test_run.py  test_secrets.py  test_services_aggregation.py  (+5 more)
tools/: build_issuer_subject_input.py  cache_sentinel.py  determinism_check.sh  ephemeral_data_lab.py  export_provenance_envelope.py  mutation_observatory.py  normalize_provenance.py  predictive_scheduler.py  publish_referrers.sh  rekor_monitor.sh  resolve_container_digest.py  run_dr_drill.py  update_action_pins.py  verify_provenance.py  verify_rekor_proof.py
(+333 files in other folders)
