[project]
name = "ci-cd-hub"
version = "1.0.0"
description = "Centralized CI/CD orchestration hub for multi-repository pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "jguida941"}
]
keywords = ["ci", "cd", "github-actions", "devops", "automation"]

dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
hub-config = "scripts.load_config:main"
hub-report = "scripts.aggregate_reports:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "S", "B", "I"]
ignore = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
